# cochat

./: .gitignore  README.md
ChatService/: CMakeLists.txt
ChatService/ChatService/: CMakeLists.txt  main.cpp
ChatService/conf/: ChatService-2.yml  ChatService-3.yml  ChatService.yml
ChatService/test_client/: CMakeLists.txt  test_group_chat_client.cpp  test_one_chat_client.cpp  test_read_offline_message_client.cpp  test_save_offline_message_client.cpp
FriendService/: CMakeLists.txt
GroupService/: CMakeLists.txt
MessageService/: CMakeLists.txt
OfflineService/: CMakeLists.txt
ProxyService/: CMakeLists.txt  build.sh
ProxyService/ProxyService/: CMakeLists.txt  chat_server.cpp  chat_server.h  chat_service.cpp  chat_service.h  chat_service_codec.cpp  chat_service_codec.h  chat_service_data.h  chat_service_dispatcher.cpp  chat_service_dispatcher.h  main.cpp
ProxyService/ProxyService/common/: business_exception.h  const.h  error_code.h
ProxyService/ProxyService/cypher/: aes.h  rsa.h
ProxyService/ProxyService/pb/: ChatService.proto  FriendService.pb.cc  ProxyService.pb.cc  ProxyService.pb.h  ProxyService.proto
ProxyService/conf/: ProxyService-2.yml  ProxyService-3.yml  ProxyService.yml
TestClient/: CMakeLists.txt
TestClient/TestClient/: CMakeLists.txt  chat_client.cpp  chat_client.h  chat_service_codec.cpp  chat_service_codec.h  chat_service_data.h  main.cpp
TestClient/TestClient/common/: const.h
TestClient/TestClient/cypher/: aes.h  rsa.h
TestClient/TestClient/model/: group.h  group_user.h  user.h
UserService/: CMakeLists.txt
(+206 files in other folders)
